<resources>
    <string name="app_name">IoT Kijkdoos</string>
    <string name="action_settings">Settings</string>

    <string name="txtTBLampLeft">LAMP Left</string>
    <string name="txtTBLampRight">LAMP Right</string>
    <string name="txtTBLampColor">LAMP Color</string>
    <string name="txtTBLampBlink">Blink</string>

    <string name="txtIVspeaker">SpeakerImage</string>
    <string name="txtTBplaySong">Song</string>
    <string name="txtTBplayAlarm">Alarm</string>

    <string name="txtIVmovement">Movement</string>
    <string name="txtTBmovement">Movement</string>

    <string name="title_activity_bluetooth">BluetoothActivity</string>

    <string name="ble_not_supported">Low Energy Bluetooth is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="no_watchbox_found">Sorry, no watchboxes found! Make sure the watchbox is within range.</string>

    <string name="title_activity_view_box">ViewBoxActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_bluetooth_disabled">BluetoothDisabledActivity</string>
</resources>
